# locq

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
include/: ansi.h  emitter.h  executor.h  locq.h  option.h  session.h  utils.h
include/parser/: brief_parser.h  parser.h  process_parser.h  threadtime_parser.h
include/view/: query_view.h  view.h
src/: CMakeLists.txt  ansi.cpp  executor.cpp  main.cpp  option.cpp  session.cpp  utils.cpp
src/parser/: brief_parser.cpp  parser.cpp  process_parser.cpp  threadtime_parser.cpp
src/view/: query_view.cpp  view.cpp
test/: CMakeLists.txt  emitter_test.cpp  utils_test.cpp
test/parser/: brief_parser_test.cpp  process_parser_test.cpp  regex_parser.cpp  threadtime_parser_test.cpp
